src/qt/libqabstracttextdocumentlayout.bf

extension CQt
{
	[LinkName("QAbstractTextDocumentLayout_new")]
	public static extern void* QAbstractTextDocumentLayout_new(void* doc);
	[LinkName("QAbstractTextDocumentLayout_MetaObject")]
	public static extern void* QAbstractTextDocumentLayout_MetaObject(void* c_this);
	[LinkName("QAbstractTextDocumentLayout_Metacast")]
	public static extern void* QAbstractTextDocumentLayout_Metacast(void* c_this, char8[] param1);
	[LinkName("QAbstractTextDocumentLayout_Metacall")]
	public static extern int32 QAbstractTextDocumentLayout_Metacall(void* c_this, int64 param1, int32 param2, void** param3);
	[LinkName("QAbstractTextDocumentLayout_Tr")]
	public static extern libqt_string QAbstractTextDocumentLayout_Tr(char8[] s);
	[LinkName("QAbstractTextDocumentLayout_Draw")]
	public static extern void QAbstractTextDocumentLayout_Draw(void* c_this, void* painter, QAbstractTextDocumentLayout__PaintContext* context);
	[LinkName("QAbstractTextDocumentLayout_HitTest")]
	public static extern int32 QAbstractTextDocumentLayout_HitTest(void* c_this, void* point, int64 accuracy);
	[LinkName("QAbstractTextDocumentLayout_AnchorAt")]
	public static extern libqt_string QAbstractTextDocumentLayout_AnchorAt(void* c_this, void* pos);
	[LinkName("QAbstractTextDocumentLayout_ImageAt")]
	public static extern libqt_string QAbstractTextDocumentLayout_ImageAt(void* c_this, void* pos);
	[LinkName("QAbstractTextDocumentLayout_FormatAt")]
	public static extern void QAbstractTextDocumentLayout_FormatAt(void* c_this, void* pos);
	[LinkName("QAbstractTextDocumentLayout_BlockWithMarkerAt")]
	public static extern void QAbstractTextDocumentLayout_BlockWithMarkerAt(void* c_this, void* pos);
	[LinkName("QAbstractTextDocumentLayout_PageCount")]
	public static extern int32 QAbstractTextDocumentLayout_PageCount(void* c_this);
	[LinkName("QAbstractTextDocumentLayout_DocumentSize")]
	public static extern void QAbstractTextDocumentLayout_DocumentSize(void* c_this);
	[LinkName("QAbstractTextDocumentLayout_FrameBoundingRect")]
	public static extern void QAbstractTextDocumentLayout_FrameBoundingRect(void* c_this, void* frame);
	[LinkName("QAbstractTextDocumentLayout_BlockBoundingRect")]
	public static extern void QAbstractTextDocumentLayout_BlockBoundingRect(void* c_this, void* block);
	[LinkName("QAbstractTextDocumentLayout_SetPaintDevice")]
	public static extern void QAbstractTextDocumentLayout_SetPaintDevice(void* c_this, void* device);
	[LinkName("QAbstractTextDocumentLayout_PaintDevice")]
	public static extern void* QAbstractTextDocumentLayout_PaintDevice(void* c_this);
	[LinkName("QAbstractTextDocumentLayout_Document")]
	public static extern void* QAbstractTextDocumentLayout_Document(void* c_this);
	[LinkName("QAbstractTextDocumentLayout_RegisterHandler")]
	public static extern void QAbstractTextDocumentLayout_RegisterHandler(void* c_this, int32 objectType, void* component);
	[LinkName("QAbstractTextDocumentLayout_UnregisterHandler")]
	public static extern void QAbstractTextDocumentLayout_UnregisterHandler(void* c_this, int32 objectType);
	[LinkName("QAbstractTextDocumentLayout_HandlerForObject")]
	public static extern void* QAbstractTextDocumentLayout_HandlerForObject(void* c_this, int32 objectType);
	[LinkName("QAbstractTextDocumentLayout_Connect_Update")]
	public static extern void QAbstractTextDocumentLayout_Connect_Update(void* c_this, c_intptr slot);
	[LinkName("QAbstractTextDocumentLayout_Connect_UpdateBlock")]
	public static extern void QAbstractTextDocumentLayout_Connect_UpdateBlock(void* c_this, c_intptr slot);
	[LinkName("QAbstractTextDocumentLayout_Connect_DocumentSizeChanged")]
	public static extern void QAbstractTextDocumentLayout_Connect_DocumentSizeChanged(void* c_this, c_intptr slot);
	[LinkName("QAbstractTextDocumentLayout_Connect_PageCountChanged")]
	public static extern void QAbstractTextDocumentLayout_Connect_PageCountChanged(void* c_this, c_intptr slot);
	[LinkName("QAbstractTextDocumentLayout_DocumentChanged")]
	public static extern void QAbstractTextDocumentLayout_DocumentChanged(void* c_this, int32 from, int32 charsRemoved, int32 charsAdded);
	[LinkName("QAbstractTextDocumentLayout_ResizeInlineObject")]
	public static extern void QAbstractTextDocumentLayout_ResizeInlineObject(void* c_this, void item, int32 posInDocument, void* format);
	[LinkName("QAbstractTextDocumentLayout_PositionInlineObject")]
	public static extern void QAbstractTextDocumentLayout_PositionInlineObject(void* c_this, void item, int32 posInDocument, void* format);
	[LinkName("QAbstractTextDocumentLayout_DrawInlineObject")]
	public static extern void QAbstractTextDocumentLayout_DrawInlineObject(void* c_this, void* painter, void* rect, void object, int32 posInDocument, void* format);
	[LinkName("QAbstractTextDocumentLayout_FormatIndex")]
	public static extern int32 QAbstractTextDocumentLayout_FormatIndex(void* c_this, int32 pos);
	[LinkName("QAbstractTextDocumentLayout_Format")]
	public static extern void QAbstractTextDocumentLayout_Format(void* c_this, int32 pos);
	[LinkName("QAbstractTextDocumentLayout_Tr2")]
	public static extern libqt_string QAbstractTextDocumentLayout_Tr2(char8[] s, char8[] c);
	[LinkName("QAbstractTextDocumentLayout_Tr3")]
	public static extern libqt_string QAbstractTextDocumentLayout_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QAbstractTextDocumentLayout_UnregisterHandler2")]
	public static extern void QAbstractTextDocumentLayout_UnregisterHandler2(void* c_this, int32 objectType, void* component);
	[LinkName("QAbstractTextDocumentLayout_Connect_Update1")]
	public static extern void QAbstractTextDocumentLayout_Connect_Update1(void* c_this, c_intptr slot);
	/// Delete this object from C++ memory
	[LinkName("QAbstractTextDocumentLayout_Delete")]
	public static extern void QAbstractTextDocumentLayout_Delete(void* self);
}
public class QTextObjectInterface
{
	protected void* nativePtr;
	
	public ~this()
	{
		CQt.QTextObjectInterface_Delete(this.nativePtr);
	}
	
	public virtual void IntrinsicSize(void* doc, int32 posInDocument, void* format)
	{
		CQt.QTextObjectInterface_IntrinsicSize(this.nativePtr, doc, posInDocument, format);
	}
	
	public virtual void DrawObject(void* painter, void* rect, void* doc, int32 posInDocument, void* format)
	{
		CQt.QTextObjectInterface_DrawObject(this.nativePtr, painter, rect, doc, posInDocument, format);
	}
	
	public void OperatorAssign(void* param1)
	{
		CQt.QTextObjectInterface_OperatorAssign(this.nativePtr, param1);
	}
	
}
extension CQt
{
	[LinkName("QTextObjectInterface_IntrinsicSize")]
	public static extern void QTextObjectInterface_IntrinsicSize(void* c_this, void* doc, int32 posInDocument, void* format);
	[LinkName("QTextObjectInterface_DrawObject")]
	public static extern void QTextObjectInterface_DrawObject(void* c_this, void* painter, void* rect, void* doc, int32 posInDocument, void* format);
	[LinkName("QTextObjectInterface_OperatorAssign")]
	public static extern void QTextObjectInterface_OperatorAssign(void* c_this, void* param1);
	/// Delete this object from C++ memory
	[LinkName("QTextObjectInterface_Delete")]
	public static extern void QTextObjectInterface_Delete(void* self);
}
public class QAbstractTextDocumentLayout__Selection
{
	protected void* nativePtr;
	
	public this(QAbstractTextDocumentLayout__Selection* param1)
	{
		this.nativePtr = CQt.QAbstractTextDocumentLayout__Selection_new(param1);
	}
	
	public ~this()
	{
		CQt.QAbstractTextDocumentLayout__Selection_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(QAbstractTextDocumentLayout__Selection* param1)
	{
		CQt.QAbstractTextDocumentLayout__Selection_OperatorAssign(this.nativePtr, param1);
	}
	
}
extension CQt
{
	[LinkName("QAbstractTextDocumentLayout__Selection_new")]
	public static extern void* QAbstractTextDocumentLayout__Selection_new(QAbstractTextDocumentLayout__Selection* param1);
	[LinkName("QAbstractTextDocumentLayout__Selection_OperatorAssign")]
	public static extern void QAbstractTextDocumentLayout__Selection_OperatorAssign(void* c_this, QAbstractTextDocumentLayout__Selection* param1);
	/// Delete this object from C++ memory
	[LinkName("QAbstractTextDocumentLayout__Selection_Delete")]
	public static extern void QAbstractTextDocumentLayout__Selection_Delete(void* self);
}
public class QAbstractTextDocumentLayout__PaintContext
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QAbstractTextDocumentLayout__PaintContext_new();
	}
	
	public ~this()
	{
		CQt.QAbstractTextDocumentLayout__PaintContext_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(QAbstractTextDocumentLayout__PaintContext* param1)
	{
		CQt.QAbstractTextDocumentLayout__PaintContext_OperatorAssign(this.nativePtr, param1);
	}
	
}
extension CQt
{
	[LinkName("QAbstractTextDocumentLayout__PaintContext_new")]
	public static extern void* QAbstractTextDocumentLayout__PaintContext_new();
	[LinkName("QAbstractTextDocumentLayout__PaintContext_new2")]
	public static extern void* QAbstractTextDocumentLayout__PaintContext_new2(QAbstractTextDocumentLayout__PaintContext* param1);
	[LinkName("QAbstractTextDocumentLayout__PaintContext_OperatorAssign")]
	public static extern void QAbstractTextDocumentLayout__PaintContext_OperatorAssign(void* c_this, QAbstractTextDocumentLayout__PaintContext* param1);
	/// Delete this object from C++ memory
	[LinkName("QAbstractTextDocumentLayout__PaintContext_Delete")]
	public static extern void QAbstractTextDocumentLayout__PaintContext_Delete(void* self);
}